solc_ossfuzz_seed_corpus/test_sol/test_c16bac1506f68c4cc5aecdf0664f4bdc8ea6615b19eb8f2c8a63176413cd796b_b0e9e2ed5f81dfe8541bf02fd379c0445482720d_sol.sol
==== Source:  ====

==== Source: su0.sol ====
contract C0 {
}
function f0(int32 i0,int144 i1,address i2) 
{
  {
i1 -= (((-5043778632791184365985771409240215564466599 * 7956145571262039955899533363066825571442769) + 3143460232986731752977232698266171376440611) & -802256374094529871318850845768382498623468);

{



}
  }



}
function f1(bytes26 i0,C0 i1,function () external i2,bytes23 i3)  returns(bytes14 o0,int48 o1)
{ }
// ----
// TypeError 7366: (su0.sol:70-264): Operator -= not compatible with types int144 and int_const -401...(79 digits omitted)...3852
